--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -3,7 +3,7 @@ name: Publish Docker Image
 on:
   push:
     branches:
-      - main  # Déclenche l'action uniquement sur la branche principale
+      - main  # Exécute l'action à chaque push sur la branche principale
 
 jobs:
   build-and-push:
@@ -19,5 +19,5 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest .
 
-      - name: Push Docker Image
+      - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest
