--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -3,7 +3,7 @@ name: Publish Docker Image
 on:
   push:
     branches:
-      - main  # Exécute l'action à chaque push sur la branche principale
+      - main
 
 jobs:
   build-and-push:
@@ -18,6 +18,9 @@ jobs:
 
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest .
+
+      - name: Tag Docker Image
+        run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest
 
       - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest
