--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -1,23 +1,29 @@
-name: Publish Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main  # Déclenche l'action uniquement sur la branche principale
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest .
+      - name: Build and tag Docker image
+        run: |
+          docker build -t nexius2/vodum:latest .
+          docker tag nexius2/vodum:latest nexius2/vodum:${{ github.sha }}
 
-      - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest
+      - name: Push Docker image
+        run: |
+          docker push nexius2/vodum:latest
+          docker push nexius2/vodum:${{ github.sha }}
