--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+
       - name: Build and tag Docker image
         run: |
           docker build -t nexius2/vodum:latest .
@@ -30,3 +31,9 @@ jobs:
         run: |
           docker push nexius2/vodum:latest
           docker push nexius2/vodum:${{ github.sha }}
+          
+            - name: Debug Environment Variables
+        run: |
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
+          echo "DOCKER_PASSWORD is set"
+
