--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -15,11 +15,15 @@ jobs:
       - name: Debug Environment Variables
         run: |
           echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
-          echo "DOCKER_PASSWORD is set" # On ne l'affiche pas pour éviter de le leak
+          if [[ -z "${{ secrets.DOCKER_USERNAME }}" ]]; then echo "❌ DOCKER_USERNAME est vide !"; exit 1; fi
+          if [[ -z "${{ secrets.DOCKER_PASSWORD }}" ]]; then echo "❌ DOCKER_PASSWORD est vide !"; exit 1; fi
+          echo "✅ Les secrets sont bien définis."
+
 
       - name: Log in to Docker Hub
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
 
 
 
