--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,21 +3,40 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Exécute le workflow uniquement sur la branche principale
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Debug Environment Variables
+        run: |
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
+          if [[ -z "${{ secrets.DOCKER_USERNAME }}" ]]; then echo "❌ DOCKER_USERNAME est vide !"; exit 1; fi
+          if [[ -z "${{ secrets.DOCKER_PASSWORD }}" ]]; then echo "❌ DOCKER_PASSWORD est vide !"; exit 1; fi
+          echo "✅ Les secrets sont bien définis."
 
-      - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest .
 
-      - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/vodum:latest
+      - name: Log in to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+
+
+
+      - name: Build and tag Docker image
+        run: |
+          docker build -t nexius2/vodum:latest .
+          docker tag nexius2/vodum:latest nexius2/vodum:${{ github.sha }}
+
+      - name: Push Docker image
+        run: |
+          docker push nexius2/vodum:latest
+          docker push nexius2/vodum:${{ github.sha }}
+          
+            - name: Debug Environment Variables
+
+
