--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,40 +2,42 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Debug Environment Variables
-        run: |
-          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
-          if [[ -z "${{ secrets.DOCKER_USERNAME }}" ]]; then echo "❌ DOCKER_USERNAME est vide !"; exit 1; fi
-          if [[ -z "${{ secrets.DOCKER_PASSWORD }}" ]]; then echo "❌ DOCKER_PASSWORD est vide !"; exit 1; fi
-          echo "✅ Les secrets sont bien définis."
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log in to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: nexius2/vodum
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
 
-
-
-
-      - name: Build and tag Docker image
-        run: |
-          docker build -t nexius2/vodum:latest -f backend/Dockerfile .
-          docker tag nexius2/vodum:latest nexius2/vodum:${{ github.sha }}
-
-      - name: Push Docker image
-        run: |
-          docker push nexius2/vodum:latest
-          docker push nexius2/vodum:${{ github.sha }}
-
-
-
+      - name: Build and push image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
